# Django-garage

./: db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_carro.py
garagem/: settings.py  urls.py  wsgi.py
